# sentiment-analyzer

./: .dockerignore  .env.sample  .flake8  .gitignore  .pre-commit-config.yaml  404.html  Dockerfile  Makefile  README.md  docker-compose.yml  fix_flake8.py  fix_spacing.py  index.html  mkdocs.yml  pyproject.toml  requirements-dev.txt  requirements.txt  sitemap.xml
.github/workflows/: ci.yml
api/: index.html
app/: main.py
app/api/endpoints/: sentiment.py
app/core/: config.py  settings.py
app/models/: sentiment.py
app/services/: sentiment_analyzer.py
deployment/: index.html
docs/: api.md  deployment.md  index.md
search/: search_index.json
tests/: conftest.py
tests/test_api/: test_sentiment.py
tests/test_services/: test_sentiment_analyzer.py
